log/build_2023-04-27_12-42-26/my_bridge/stdout_stderr.log
running egg_info
writing ../../build/my_bridge/my_bridge.egg-info/PKG-INFO
writing dependency_links to ../../build/my_bridge/my_bridge.egg-info/dependency_links.txt
writing entry points to ../../build/my_bridge/my_bridge.egg-info/entry_points.txt
writing requirements to ../../build/my_bridge/my_bridge.egg-info/requires.txt
writing top-level names to ../../build/my_bridge/my_bridge.egg-info/top_level.txt
reading manifest file '../../build/my_bridge/my_bridge.egg-info/SOURCES.txt'
writing manifest file '../../build/my_bridge/my_bridge.egg-info/SOURCES.txt'
running build
running build_py
copying my_bridge/bridge.py -> /home/cec20/Yangjiaxin/my-carla-ros-bridge/build/my_bridge/build/lib/my_bridge
running install
running install_lib
copying /home/cec20/Yangjiaxin/my-carla-ros-bridge/build/my_bridge/build/lib/my_bridge/bridge.py -> /home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/python3.8/site-packages/my_bridge
byte-compiling /home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/python3.8/site-packages/my_bridge/bridge.py to bridge.cpython-38.pyc
  File "/home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/python3.8/site-packages/my_bridge/bridge.py", line 82
    carla_bridge.initialize_bridge()
    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/python3.8/site-packages/my_bridge-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/my_bridge/my_bridge.egg-info to /home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/python3.8/site-packages/my_bridge-0.0.0-py3.8.egg-info
running install_scripts
Installing bridge script to /home/cec20/Yangjiaxin/my-carla-ros-bridge/install/my_bridge/lib/my_bridge
writing list of installed files to '/home/cec20/Yangjiaxin/my-carla-ros-bridge/build/my_bridge/install.log'
